ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/paypal__c/fields/isSandbox__c.field-meta.xml
<CustomField>
    <fullName>isSandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run in Sandbox</label>
    <type>Checkbox</type>
</CustomField>