ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/paypal__c/fields/Production_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Production_Client_Id__c</fullName>
    <defaultValue>&apos;AUBaBgMXLivc3gigzLn093KC_zg8LjRAIMOCCyq7XBwj5SexhAmbfe6yBQSvz9e35W_tvog8UuXmQyn8&apos;</defaultValue>
    <label>Production Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>