ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/paypal__c/fields/Sandbox_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Client_Id__c</fullName>
    <defaultValue>&apos;Aco4XBHvqhIQUWrvS-1YJektxHY1qIK1Mi5v_qXDhz2a0DsAYWlpuGFwpiIZIstC7n_Cc8XQnmCN93hX&apos;</defaultValue>
    <label>Sandbox Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>